# pm_accelator_agentic_workflow

./: Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  vercel.json
data/: script-1.vtt  script-2.vtt
docker/: api.Dockerfile
frontend_integration/: types.ts
notebooks/: 01_langgraph_overview.ipynb  02_chunking_retrieval_eval.ipynb  03_ingest_index.ipynb  03_ingest_index.out.ipynb  04_graph_visualization.ipynb  05_hybrid_retrieval.ipynb  07_evaluate_ragas.ipynb
prd/: prd.md
src/ai_interviewer_pm/: __init__.py  settings.py
src/ai_interviewer_pm/agents/: adaptive_questioning.py  behavioral_graph.py  behavioral_schema.py  coaching_style.py  grail_rubric.py  multi_agent_evaluator.py
src/ai_interviewer_pm/api/: __init__.py  behavioral_interview.py  evaluation.py  models.py  requirements.txt  server.py
src/ai_interviewer_pm/evaluation/: metrics.py
src/ai_interviewer_pm/ingestion/: chunkers.py  pipeline.py
src/ai_interviewer_pm/retrieval/: hybrid.py  rerankers.py  vectorstore.py
src/ai_interviewer_pm/tools/: internet.py  vector_db.py
tests/: test_behavioral_interview.py  test_chunkers.py  test_grail_rubric.py  test_hybrid.py  test_multi_agent.py  test_schema.py  test_vectorstore.py
we/: package-lock.json  package.json
web/: Dockerfile  Dockerfile 2.txt  index.html
